@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1497 2023/01/21 11:24:21 pin Exp $
+# $NetBSD: Makefile,v 1.1498 2023/01/23 15:29:37 manu Exp $
 #
 
 COMMENT=	Networking tools
@@ -409,6 +409,7 @@ SUBDIR+=	nagios-plugin-dotpid
 SUBDIR+=	nagios-plugin-dumpdates
 SUBDIR+=	nagios-plugin-fstab
 SUBDIR+=	nagios-plugin-gfbricks
+SUBDIR+=	nagios-plugin-ipf
 SUBDIR+=	nagios-plugin-ldap
 SUBDIR+=	nagios-plugin-lpd
 SUBDIR+=	nagios-plugin-milter
