@@ -1,0 +1,3 @@
+$NetBSD: DESCR,v 1.1 2023/01/23 15:29:37 manu Exp $
+
+This Nagios plugin checks BSD LPQ queues status
