@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2023/01/23 15:29:37 manu Exp $
+libexec/nagios/check_ipf
