@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.529 2023/01/23 15:22:32 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.530 2023/01/23 15:29:37 manu Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -668,3 +668,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated print/poppler to 23.01.0 [wiz 2023-01-23]
 	Updated graphics/graphviz to 7.1.0 [micha 2023-01-23]
 	Updated converters/libiconv to 1.17 [wiz 2023-01-23]
+	Added net/nagios-plugin/ipf 0.1 [manu 2023-01-23]
